examples/errors/invalid_main_signature.aaa
fn
    main
args
    a as int
begin
    nop
end
